third step finished

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,10 +1,9 @@
-
-$main-colors: #08020d, #cacaca, #e0e0e0, #3c3b3d, #34c176, 
-#f89202, #5328A1, #95390C, #fff;
+$main-colors: #08020d, #cacaca, #e0e0e0, #3c3b3d, #34c176,
+  #f89202, #5328a1, #95390c, #fff;
 $desktop-title-sizes: 60px, 38px, 24px, 18px;
-$desktop-title-line-heights: 90px, 57px, 45px, 27px;
+$desktop-title-line-heights: 90px, 57px, 45px, 36px, 27px;
 $mobile-title-sizes: 30px, 18px, 16px, 18px;
 $mobile-title-line-heights: 45px, 27px, 24px, 24px;
 $text-sizes: 64px, 56px, 48px, 40px, 32px, 24px, 18px, 16px, 14px, 12.8px, 11px;
 $text-line-heights: 96px, 84px, 72px, 60px, 48px, 36px, 27px, 24px, 19.2px, 16px;
-$main-fonts: "Roboto", Arial, sans-serif;
+$main-fonts: "Roboto", arial, sans-serif;
