--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,11 +1,11 @@
 @font-face {
   font-weight: normal;
-  font-family: "Roboto";
+  font-family: Roboto;
   src: url("../fonts/Roboto-Regular.ttf") format("opentype"), url("../fonts/Roboto-Regular.woff") format("woff"), url("../fonts/Roboto-Regular.woff2") format("woff2");
 }
 @font-face {
   font-weight: bold;
-  font-family: "Roboto";
+  font-family: Roboto;
   src: url("../fonts/Roboto-Bold.ttf") format("opentype"), url("../fonts/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto-Bold.woff2") format("woff2");
 }
 html {
@@ -13,13 +13,13 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  line-height: 27px;
-  color: #cacaca;
-  background-color: #08020d;
   max-width: 1440px;
+  color: #cacaca;
   font-weight: normal;
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  line-height: 27px;
+  background-color: #08020d;
   margin: 0;
   padding: 0;
 }
@@ -27,15 +27,22 @@ body {
 h1 {
   font-size: 60px;
   line-height: 90px;
-  text-transform: uppercase;
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 h2 {
   font-size: 38px;
   line-height: 57px;
-  text-transform: uppercase;
   font-weight: bold;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: normal;
+  text-transform: uppercase;
 }
 
 .container {
@@ -53,9 +60,9 @@ h2 {
   width: 1px;
   height: 1px;
   padding: 0;
-  border: 0;
   overflow: hidden;
   white-space: nowrap;
+  border: 0;
 }
 
 @media screen and (max-width: 414px) {
@@ -64,16 +71,16 @@ h2 {
   }
 
   .container {
+    box-sizing: border-box;
     width: 414px;
     padding: 0 20px;
-    box-sizing: border-box;
   }
 
   h1 {
     font-size: 30px;
     line-height: 45px;
-    text-transform: uppercase;
     font-weight: bold;
+    text-transform: uppercase;
     margin: 0;
     padding: 0;
   }
@@ -81,25 +88,24 @@ h2 {
   h2 {
     font-size: 18px;
     line-height: 27px;
-    text-transform: uppercase;
     font-weight: bold;
+    text-transform: uppercase;
     margin: 0;
     padding: 0;
   }
 }
 .bg-header {
+  position: relative;
   background-image: url("../images/banner.png");
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
-  position: relative;
+  background-size: cover;
 }
 .bg-header .nav-wrapper {
   padding-top: 25px;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-  width: 100%;
+  justify-content: flex-start;
   text-transform: uppercase;
 }
 .bg-header .nav-wrapper .nav-element {
@@ -111,8 +117,8 @@ h2 {
 .bg-header .nav-wrapper .nav-element .nav-list {
   list-style: none;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
+  justify-content: flex-start;
 }
 .bg-header .nav-wrapper .nav-element .nav-list .nav-item {
   margin-right: 25px;
@@ -124,17 +130,19 @@ h2 {
 .bg-header .nav-wrapper .nav-element .nav-list .nav-item .nav-link:hover {
   color: #fff;
 }
+.bg-header .nav-wrapper .nav-element .nav-list .nav-item .selected {
+  color: #fff;
+}
 .bg-header .nav-wrapper .nav-element .nav-list .nav-item:last-child {
   margin-right: 0;
 }
 .bg-header .nav-wrapper .nav-music {
   position: relative;
-  margin-left: 42px;
   margin-right: 50px;
+  margin-left: 42px;
   color: #fff;
 }
 .bg-header .nav-wrapper .nav-music::before {
-  content: "";
   position: absolute;
   top: -4px;
   left: -40px;
@@ -143,21 +151,22 @@ h2 {
   background-image: url("../images/logo.svg");
   background-repeat: no-repeat;
   background-size: 100%;
+  content: "";
 }
 .bg-header .nav-wrapper .nav-search {
-  font-family: Arial, sans-serif;
-  font-size: 13.3px;
-  line-height: 15.3px;
-  font-weight: 400;
-  padding-left: 10px;
-  padding-top: 5px;
+  box-sizing: border-box;
   width: 248px;
   height: 25px;
-  background-color: #3c3b3d;
-  border-radius: 50px;
   margin-right: 0;
   margin-left: auto;
-  box-sizing: border-box;
+  padding-top: 5px;
+  padding-left: 10px;
+  font-weight: 400;
+  font-size: 13.3px;
+  font-family: arial, sans-serif;
+  line-height: 15.3px;
+  background-color: #3c3b3d;
+  border-radius: 50px;
 }
 .bg-header .nav-wrapper .nav-search .search-link {
   text-decoration: none;
@@ -175,10 +184,10 @@ h2 {
   color: #fff;
 }
 .page-description .welcome-text {
+  margin-top: 33px;
   color: #fff;
   font-size: 16px;
   line-height: 24px;
-  margin-top: 33px;
 }
 .page-description .welcome-form {
   max-width: 570px;
@@ -190,13 +199,13 @@ h2 {
   margin-bottom: 1.5rem;
 }
 .page-description .welcome-form .welcome-datas .welcome-input {
+  box-sizing: border-box;
   min-width: 270px;
   min-height: 50px;
   padding-left: 20px;
+  background: transparent;
   border: 2px solid #cacaca;
   border-radius: 3px;
-  background: transparent;
-  box-sizing: border-box;
 }
 .page-description .welcome-form .welcome-datas .welcome-input::placeholder {
   color: #fff;
@@ -205,12 +214,12 @@ h2 {
 }
 .page-description .welcome-form .btn-green {
   width: 100%;
-  background-color: #34c176;
-  font-family: Arial, sans-serif;
+  color: #fff;
   font-size: 13.3px;
+  font-family: arial, sans-serif;
   line-height: 15.3px;
   text-transform: uppercase;
-  color: #fff;
+  background-color: #34c176;
 }
 
 @media screen and (max-width: 414px) {
@@ -228,34 +237,148 @@ h2 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding-left: 0;
     padding-top: 10px;
+    padding-left: 0;
   }
   .bg-header .nav-wrapper .nav-music {
     margin-top: 3px;
     margin-left: 41px;
   }
   .bg-header .nav-wrapper .nav-search {
-    margin-top: 5px;
     width: 374px;
+    margin-top: 5px;
+  }
+
+  .page-description {
+    padding-top: 78px;
+    padding-bottom: 200px;
+  }
+  .page-description .welcome-text {
+    margin-top: 15px;
+  }
+  .page-description .welcome-form .welcome-datas {
+    flex-direction: column;
+    margin-bottom: 25px;
+  }
+  .page-description .welcome-form .welcome-datas .welcome-input {
+    width: 100%;
+  }
+  .page-description .welcome-form .welcome-datas .welcome-input:first-of-type {
+    margin-bottom: 23px;
   }
 }
-.page-description {
-  padding-top: 78px;
-  padding-bottom: 200px;
+.page-pricing {
+  padding-top: 100px;
 }
-.page-description .welcome-text {
-  margin-top: 15px;
+.page-pricing .title-pricing {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 50px;
+  text-align: center;
 }
-.page-description .welcome-form .welcome-datas {
-  flex-direction: column;
-  margin-bottom: 25px;
+.page-pricing .catalog-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
-.page-description .welcome-form .welcome-datas .welcome-input {
-  width: 100%;
+.page-pricing .catalog-wrapper .bg-free {
+  background-image: url("../images/subscribe_1.png");
 }
-.page-description .welcome-form .welcome-datas .welcome-input:first-of-type {
-  margin-bottom: 23px;
+.page-pricing .catalog-wrapper .bg-standard {
+  background-image: url("../images/subscribe_2.png");
+}
+.page-pricing .catalog-wrapper .bg-premium {
+  background-image: url("../images/subscribe_3.png");
+}
+.page-pricing .catalog-wrapper .pricing-item {
+  width: 368px;
+  height: 615px;
+  padding: 0 1.5rem;
+  box-sizing: border-box;
+  border-radius: 1rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.page-pricing .catalog-wrapper .pricing-item .card-item {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 200px;
+  text-align: center;
+  margin-top: 25px;
+}
+.page-pricing .catalog-wrapper .pricing-item .pricing-value {
+  font-size: 32px;
+  line-height: 48px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+.page-pricing .catalog-wrapper .pricing-item .pricing-value .price {
+  font-size: 64px;
+  line-height: 1em;
+  padding-right: 15px;
+}
+.page-pricing .catalog-wrapper .pricing-item .btn-trans {
+  text-decoration: none;
+  font-weight: normal;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 16px;
+  line-height: 24px;
+  border: 1px solid #fff;
+  width: 319px;
+  height: 66px;
+  box-sizing: border-box;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+.page-pricing .catalog-wrapper .pricing-item .pricing-footer {
+  font-size: 12.8px;
+  line-height: 19.2px;
+  color: #fff;
+  text-align: center;
+  margin-top: 63px;
+}
+.page-pricing .price-description {
+  font-size: 16px;
+  line-height: 27px;
+  color: #fff;
+  text-align: center;
+  margin-top: 38px;
+}
+
+@media screen and (max-width: 414px) {
+  .page-pricing .catalog-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .page-pricing .catalog-wrapper .pricing-item {
+    margin-bottom: 25px;
+    width: 374px;
+    height: 621px;
+  }
+  .page-pricing .catalog-wrapper .pricing-item .card-item {
+    font-size: 16px;
+    line-height: 27px;
+    margin-top: 12px;
+  }
+  .page-pricing .catalog-wrapper .pricing-item .btn-trans {
+    width: 326px;
+  }
+  .page-pricing .catalog-wrapper .pricing-item .pricing-footer {
+    padding: 0;
+  }
+  .page-pricing .pricing-item:last-of-type {
+    margin-bottom: 0;
+  }
+  .page-pricing .price-description {
+    margin-top: 8px;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
