--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,15 +1,17 @@
 @font-face {
   font-weight: normal;
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular.ttf") format("opentype"),
+  font-family: Roboto;
+  src:
+    url("../fonts/Roboto-Regular.ttf") format("opentype"),
     url("../fonts/Roboto-Regular.woff") format("woff"),
     url("../fonts/Roboto-Regular.woff2") format("woff2");
 }
 
 @font-face {
   font-weight: bold;
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Bold.ttf") format("opentype"),
+  font-family: Roboto;
+  src:
+    url("../fonts/Roboto-Bold.ttf") format("opentype"),
     url("../fonts/Roboto-Bold.woff") format("woff"),
     url("../fonts/Roboto-Bold.woff2") format("woff2");
 }
@@ -19,26 +21,38 @@ html {
 }
 
 body {
-  font-family: nth($main-fonts, 1), nth($main-fonts, 3);
-  font-size: nth($text-sizes, 7);
-  line-height: nth($text-line-heights, 7);
-  color: nth($main-colors, 2);
-  background-color: nth($main-colors, 1);
   max-width: 1440px;
+
+  color: nth($main-colors, 2);
   font-weight: normal;
+  font-size: nth($text-sizes, 7);
+  font-family: nth($main-fonts, 1), nth($main-fonts, 3);
+  line-height: nth($text-line-heights, 7);
+
+  background-color: nth($main-colors, 1);
+
   @include mp-0;
 }
 
 h1 {
   font-size: nth($desktop-title-sizes, 1);
   line-height: nth($desktop-title-line-heights, 1);
+
   @include title-property;
 }
 
 h2 {
   font-size: nth($desktop-title-sizes, 2);
   line-height: nth($desktop-title-line-heights, 2);
+
   @include title-property;
+}
+
+h3 {
+  font-size: nth($desktop-title-sizes, 3);
+  line-height: nth($desktop-title-line-heights, 4);
+
+  @include title-regular;
 }
 
 .container {
@@ -48,6 +62,7 @@ h2 {
 
 .btn {
   padding: 20px 30px;
+
   border-radius: 5px;
 }
 
@@ -57,10 +72,12 @@ h2 {
   width: 1px;
   height: 1px;
   padding: 0;
-  border: 0;
+
   overflow: hidden;
 
   white-space: nowrap;
+
+  border: 0;
 }
 
 @media screen and (max-width: 414px) {
@@ -69,21 +86,23 @@ h2 {
   }
 
   .container {
+    box-sizing: border-box;
     width: 414px;
     padding: 0 20px;
-    box-sizing: border-box;
   }
 
   h1 {
     font-size: nth($mobile-title-sizes, 1);
     line-height: nth($mobile-title-line-heights, 1);
+
     @include title-property;
     @include mp-0;
   }
-  
+
   h2 {
     font-size: nth($mobile-title-sizes, 2);
     line-height: nth($mobile-title-line-heights, 2);
+
     @include title-property;
     @include mp-0;
   }
