--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,24 +1,26 @@
-
 .bg-header {
+  position: relative;
+
   background-image: url("../images/banner.png");
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
-  position: relative;
-  
+  background-size: cover;
+
   .nav-wrapper {
     @include p-top-25;
     @include flex-start-center;
-    width: 100%;
+
     text-transform: uppercase;
 
     .nav-element {
       font-size: nth($text-sizes, 11);
       line-height: nth($text-line-heights, 10);
+
       @include mp-0;
-      
+
       .nav-list {
         list-style: none;
+
         @include flex-start-center;
 
         .nav-item {
@@ -26,10 +28,15 @@
 
           .nav-link {
             @include link;
+
             color: nth($main-colors, 2);
           }
 
           .nav-link:hover {
+            color: nth($main-colors, 9);
+          }
+
+          .selected {
             color: nth($main-colors, 9);
           }
         }
@@ -42,40 +49,48 @@
 
     .nav-music {
       position: relative;
-      margin-left: 42px;
+
       margin-right: 50px;
+      margin-left: 42px;
+
       color: nth($main-colors, 9);
     }
 
     .nav-music::before {
-      content: '';
       position: absolute;
       top: -4px;
       left: -40px;
+
       width: 24px;
       height: 24px;
+
       background-image: url("../images/logo.svg");
       background-repeat: no-repeat;
       background-size: 100%;
+
+      content: "";
     }
 
     .nav-search {
-      font-family: nth($main-fonts, 2), nth($main-fonts, 3);
-      font-size: 13.3px;
-      line-height: 15.3px;
-      font-weight: 400;
-      padding-left: 10px;
-      padding-top: 5px;
+      box-sizing: border-box;
       width: 248px;
       height: 25px;
-      background-color: nth($main-colors, 4);
-      border-radius: 50px;
       margin-right: 0;
       margin-left: auto;
-      box-sizing: border-box;
+      padding-top: 5px;
+      padding-left: 10px;
+
+      font-weight: 400;
+      font-size: 13.3px;
+      font-family: nth($main-fonts, 2), nth($main-fonts, 3);
+      line-height: 15.3px;
+
+      background-color: nth($main-colors, 4);
+      border-radius: 50px;
 
       .search-link {
         @include link;
+
         color: #757575;
       }
     }
@@ -86,18 +101,21 @@
   margin: 0 auto;
   padding-top: 143px;
   padding-bottom: 200px;
+
   text-align: center;
 
   .title {
     margin: 0;
+
     color: nth($main-colors, 9);
   }
-  
+
   .welcome-text {
+    margin-top: 33px;
+
     color: nth($main-colors, 9);
     font-size: nth($text-sizes, 8);
     line-height: nth($text-line-heights, 8);
-    margin-top: 33px;
   }
 
   .welcome-form {
@@ -110,13 +128,15 @@
       margin-bottom: 1.5rem;
 
       .welcome-input {
+        box-sizing: border-box;
         min-width: 270px;
         min-height: 50px;
         padding-left: 20px;
+
+        background: transparent;
+
         border: 2px solid nth($main-colors, 2);
         border-radius: 3px;
-        background: transparent;
-        box-sizing: border-box;
       }
 
       .welcome-input::placeholder {
@@ -128,12 +148,14 @@
 
     .btn-green {
       width: 100%;
-      background-color: nth($main-colors, 5);
-      font-family: nth($main-fonts, 2), nth($main-fonts, 3);
+
+      color: nth($main-colors, 9);
       font-size: 13.3px;
+      font-family: nth($main-fonts, 2), nth($main-fonts, 3);
       line-height: 15.3px;
       text-transform: uppercase;
-      color: nth($main-colors, 9);
+
+      background-color: nth($main-colors, 5);
     }
   }
 }
@@ -141,15 +163,16 @@
 @media screen and (max-width: 414px) {
   .bg-header {
     .nav-wrapper {
-      @include flex-column-left;
+      @include flex-column-start;
 
       .nav-element {
         margin-left: 0;
-      
+
         .nav-list {
-          @include flex-column-left;
-          padding-left: 0;
+          @include flex-column-start;
+
           padding-top: 10px;
+          padding-left: 0;
         }
       }
 
@@ -159,36 +182,33 @@
       }
 
       .nav-search {
-        margin-top: 5px;
         width: 374px;
-     }
-
-    }
-  }
-}
-
-.page-description {
-  padding-top: 78px;
-  padding-bottom: 200px;
-  
-  .welcome-text {
-   margin-top: 15px;
-  }
-
-  .welcome-form {
-   
-    .welcome-datas {
-      flex-direction: column;
-      margin-bottom: 25px;
-
-      .welcome-input {
-        width: 100%;
-      }
-
-      .welcome-input:first-of-type {
-        margin-bottom: 23px;
+        margin-top: 5px;
       }
     }
   }
+
+  .page-description {
+    padding-top: 78px;
+    padding-bottom: 200px;
+
+    .welcome-text {
+      margin-top: 15px;
+    }
+
+    .welcome-form {
+      .welcome-datas {
+        flex-direction: column;
+        margin-bottom: 25px;
+
+        .welcome-input {
+          width: 100%;
+        }
+
+        .welcome-input:first-of-type {
+          margin-bottom: 23px;
+        }
+      }
+    }
+  }
 }
- 
