--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,7 +1,11 @@
-
 @mixin title-property {
-  text-transform: uppercase;
   font-weight: bold;
+  text-transform: uppercase;
+}
+
+@mixin title-regular {
+  font-weight: normal;
+  text-transform: uppercase;
 }
 
 @mixin p-top-25 {
@@ -10,8 +14,27 @@
 
 @mixin flex-start-center {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
+  justify-content: flex-start;
+}
+
+@mixin flex-between-start {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+@mixin flex-center-start {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+@mixin flex-column-start {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 @mixin mp-0 {
@@ -21,11 +44,4 @@
 
 @mixin link {
   text-decoration: none;
-}
-
-@mixin flex-column-left {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
 }
