--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -18,6 +18,12 @@
   justify-content: flex-start;
 }
 
+@mixin flex-start-start {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
 @mixin flex-between-start {
   display: flex;
   align-items: flex-start;
