--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -58,3 +58,18 @@
   font-size: 12px;
   line-height: nth($text-line-heights, 9);
 }
+
+@mixin btn-before-20-30 {
+  position: absolute;
+  top: 20px;
+  left: 30px;
+
+  width: 20px;
+  height: 20px;
+
+  background-repeat: no-repeat;
+
+  filter: invert(1);
+
+  content: "";
+}
