--- a/src/css/app.css
+++ b/src/css/app.css
@@ -104,9 +104,9 @@ h3 {
 .bg-header .nav-wrapper {
   padding-top: 25px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  flex-wrap: wrap;
   text-transform: uppercase;
 }
 .bg-header .nav-wrapper .nav-element {
@@ -118,9 +118,9 @@ h3 {
 .bg-header .nav-wrapper .nav-element .nav-list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  flex-wrap: wrap;
 }
 .bg-header .nav-wrapper .nav-element .nav-list .nav-item {
   margin-right: 25px;
@@ -280,9 +280,9 @@ h3 {
 }
 .page-pricing .catalog-wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
 .page-pricing .catalog-wrapper .bg-free {
   background-image: url("../images/subscribe_1.png");
@@ -315,9 +315,9 @@ h3 {
   font-size: 32px;
   line-height: 48px;
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
-  flex-wrap: wrap;
 }
 .page-pricing .catalog-wrapper .pricing-item .pricing-value .price {
   padding-right: 15px;
@@ -399,9 +399,9 @@ h3 {
 }
 .page-news .newses .news-item {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
 .page-news .newses .news-item .news-wrapper {
   display: flex;
@@ -433,9 +433,9 @@ h3 {
 }
 .page-news .newses .news-item .news-wrapper .news-footer .news-author {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  flex-wrap: wrap;
   margin-top: 10px;
 }
 .page-news .newses .news-item .news-wrapper .news-footer .news-author .avtor-company {
@@ -516,9 +516,9 @@ h3 {
 }
 .page-app .app-wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  flex-wrap: wrap;
   padding-top: 15px;
 }
 .page-app .app-wrapper .app-text {
@@ -568,9 +568,9 @@ h3 {
 }
 .page-footer .footer-lists .footer-wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
-  flex-wrap: wrap;
   padding-top: 36px;
   padding-bottom: 75px;
 }
@@ -605,9 +605,9 @@ h3 {
 }
 .page-footer .footer-lists .footer-wrapper .footer-items .footer-social {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
-  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -628,9 +628,9 @@ h3 {
 }
 .page-footer .footer-main .footer-main-list {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
-  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -760,25 +760,25 @@ h3 {
 }
 .page-popular-track .popular-wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
-  flex-wrap: wrap;
 }
 .page-popular-track .popular-wrapper .popular-track {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
-  flex-wrap: wrap;
   width: calc(50% - 49px);
   margin-bottom: 25px;
 }
 .page-popular-track .popular-wrapper .popular-track .track-info {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  flex-wrap: wrap;
-  margin-left: 15px;
   width: calc(100% - 70px);
+  margin-left: 15px;
   font-size: 12.8px;
   line-height: 19.2px;
 }
@@ -821,6 +821,58 @@ h3 {
     margin-top: 20px;
   }
   .page-popular-track .popular-wrapper .popular-track:nth-child(2n+1) {
+    margin-right: 0;
+  }
+}
+.page-discography {
+  padding-top: 68px;
+}
+.page-discography .disco-title {
+  margin-bottom: 48px;
+}
+.page-discography .disco-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.page-discography .disco-wrapper .discography-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-right: 50px;
+  margin-bottom: 25px;
+}
+.page-discography .disco-wrapper .discography-item .disco-name {
+  margin-bottom: 0;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 27px;
+  text-transform: capitalize;
+}
+.page-discography .disco-wrapper .discography-item .disco-year {
+  margin: 0;
+  padding: 0;
+  color: #e0e0e0;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+@media screen and (max-width: 414px) {
+  .page-discography {
+    padding-top: 100px;
+  }
+  .page-discography .disco-wrapper .discography-item .disco-img {
+    width: 137px;
+    height: auto;
+  }
+  .page-discography .disco-wrapper .discography-item .disco-name {
+    max-width: 138px;
+  }
+  .page-discography .disco-wrapper .discography-item:nth-child(2n) {
     margin-right: 0;
   }
 }
