--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -56,7 +56,9 @@ h3 {
 }
 
 .container {
+  position: relative;
   max-width: 1200px;
+
   margin: 0 auto;
 }
 
@@ -86,6 +88,8 @@ h3 {
   }
 
   .container {
+    position: relative;
+
     box-sizing: border-box;
     width: 414px;
     padding: 0 20px;
