--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,15 +1,18 @@
 .bg-header {
-  position: relative;
-
   background-image: url("../images/banner.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
   .nav-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 1200px;
+
     @include p-top-25;
     @include flex-start-center;
-    margin-bottom: -57px;
 
     text-transform: uppercase;
 
@@ -165,7 +168,9 @@
   .bg-header {
     .nav-wrapper {
       @include flex-column-start;
-      margin-bottom: -122px;
+      left: 20px;
+
+      width: 374px;
 
       .nav-element {
         margin-left: 0;
@@ -191,8 +196,7 @@
   }
 
   .page-description {
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 250px;
 
     .welcome-text {
       margin-top: 15px;
