--- a/src/css/app.css
+++ b/src/css/app.css
@@ -97,6 +97,7 @@ h3 {
   }
 }
 .bg-header {
+  margin: 0 auto;
   background-image: url("../images/banner.png");
   background-repeat: no-repeat;
   background-position: center;
