--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,6 @@
 .bg-header {
+  margin: 0 auto;
+
   background-image: url("../images/banner.png");
   background-repeat: no-repeat;
   background-position: center;
