--- a/src/css/app.css
+++ b/src/css/app.css
@@ -97,8 +97,7 @@ h3 {
   }
 }
 .bg-header {
-  width: 1440px;
-  margin: 0 auto;
+  position: relative;
   background-image: url("../images/banner.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -107,7 +106,7 @@ h3 {
 .bg-header .nav-wrapper {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 120px;
   width: 1200px;
   padding-top: 25px;
   display: flex;
@@ -232,6 +231,13 @@ h3 {
 }
 
 @media screen and (max-width: 414px) {
+  .container-big {
+    position: relative;
+    width: 414px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
   .bg-header .nav-wrapper {
     display: flex;
     flex-direction: column;
