--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -112,12 +112,16 @@
 
   .title {
     margin: 0;
+    padding-right: 120px;
+    padding-left: 120px;
 
     color: nth($main-colors, 9);
   }
 
   .welcome-text {
     margin-top: 33px;
+    padding-right: 120px;
+    padding-left: 120px;
 
     color: nth($main-colors, 9);
     font-size: nth($text-sizes, 8);
@@ -207,9 +211,17 @@
 
   .page-description {
     padding-top: 250px;
+    padding-right: 20px;
+    padding-left: 20px;
+
+    .title {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
 
     .welcome-text {
       margin-top: 15px;
+      padding: 0;
     }
 
     .welcome-form {
