--- a/src/css/app.css
+++ b/src/css/app.css
@@ -182,6 +182,7 @@ h3 {
 }
 
 .page-description {
+  max-width: 1200px;
   margin: 0 auto;
   padding-top: 200px;
   padding-bottom: 200px;
@@ -260,6 +261,9 @@ h3 {
   }
 
   .page-description {
+    box-sizing: border-box;
+    width: 414px;
+    padding: 0 20px;
     padding-top: 250px;
   }
   .page-description .welcome-text {
