--- a/src/scss/page-app.scss
+++ b/src/scss/page-app.scss
@@ -32,7 +32,7 @@
     }
 
     .img-app {
-      width: 600px;
+      width: 333px;
     }
   }
 }
@@ -50,8 +50,8 @@
       }
 
       .img-app {
+        margin: 0 auto;
         order: 1;
-        width: 100%;
       }
     }
   }
