--- a/src/css/app.css
+++ b/src/css/app.css
@@ -544,7 +544,7 @@ h3 {
   border-radius: 32px;
 }
 .page-app .app-wrapper .img-app {
-  width: 600px;
+  width: 333px;
 }
 
 @media screen and (max-width: 414px) {
@@ -561,8 +561,8 @@ h3 {
     margin-top: -30px;
   }
   .page-app .app-wrapper .img-app {
+    margin: 0 auto;
     order: 1;
-    width: 100%;
   }
 }
 .page-footer {
