--- a/src/css/app.css
+++ b/src/css/app.css
@@ -13,7 +13,6 @@ html {
 }
 
 body {
-  max-width: 1440px;
   color: #cacaca;
   font-weight: normal;
   font-size: 18px;
@@ -67,14 +66,10 @@ h3 {
 }
 
 @media screen and (max-width: 414px) {
-  body {
-    width: 414px;
-  }
-
   .container {
     position: relative;
     box-sizing: border-box;
-    width: 414px;
+    width: 100%;
     padding: 0 20px;
   }
 
