--- a/src/css/app.css
+++ b/src/css/app.css
@@ -92,6 +92,8 @@ h3 {
   }
 }
 .bg-header {
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-image: url("../images/banner.png");
   background-repeat: no-repeat;
   background-position: center;
