--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,7 @@
 .bg-header {
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   background-image: url("../images/banner.png");
   background-repeat: no-repeat;
   background-position: center;
