--- a/src/css/app.css
+++ b/src/css/app.css
@@ -101,7 +101,7 @@ h3 {
 }
 .bg-header .nav-wrapper {
   position: absolute;
-  top: 0;
+  top: -200px;
   left: 20px;
   width: 1200px;
   padding-top: 25px;
@@ -178,7 +178,6 @@ h3 {
 }
 
 .page-description {
-  padding-top: 200px;
   text-align: center;
 }
 .page-description .title {
@@ -253,9 +252,6 @@ h3 {
     margin-top: 5px;
   }
 
-  .page-description {
-    padding-top: 250px;
-  }
   .page-description .welcome-text {
     margin-top: 15px;
     padding: 0;
