--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -105,18 +105,18 @@
 }
 
 .page-description {
+  color: nth($main-colors, 9);
+
   text-align: center;
 
   .title {
     margin: 0;
-
-    color: nth($main-colors, 9);
   }
 
   .welcome-text {
     margin-top: 33px;
 
-    color: nth($main-colors, 9);
+    font-weight: normal;
     font-size: nth($text-sizes, 8);
     line-height: nth($text-line-heights, 8);
   }
