--- a/src/css/app.css
+++ b/src/css/app.css
@@ -102,7 +102,7 @@ h3 {
 .bg-header .nav-wrapper {
   position: absolute;
   top: -200px;
-  left: 20px;
+  left: 0;
   width: 1200px;
   padding-top: 25px;
   display: flex;
